<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--     <item
        android:id="@+id/menu_play"
        android:icon="@android:drawable/ic_menu_play_clip"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/play">
    </item> -->
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about">
    </item>
    <item
        android:id="@+id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit">
    </item>

</menu>